@@ -22,6 +22,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.apache.pig.ExecType;
 import org.apache.pig.impl.logicalLayer.LogicalOperator;
 import org.apache.pig.impl.logicalLayer.LogicalPlan;
 import org.apache.pig.impl.plan.optimizer.*;
@@ -29,21 +30,29 @@ import org.apache.pig.impl.plan.optimizer.*;
 /**
  * An optimizer for logical plans.
  */
-public class LogicalOptimizer extends PlanOptimizer<LogicalOperator, LogicalPlan> {
-    
+public class LogicalOptimizer extends
+        PlanOptimizer<LogicalOperator, LogicalPlan> {
+
     public static final String LOLOAD_CLASSNAME = "org.apache.pig.impl.logicalLayer.LOLoad";
     public static final String LOSTREAM_CLASSNAME = "org.apache.pig.impl.logicalLayer.LOStream";
 
     public LogicalOptimizer(LogicalPlan plan) {
-        super(plan);
+        this(plan, ExecType.MAPREDUCE);
+    }
 
+    public LogicalOptimizer(LogicalPlan plan, ExecType mode) {
+        super(plan);
+        runOptimizations(plan, mode);
+    }
+
+    private void runOptimizations(LogicalPlan plan, ExecType mode) {
         // List of rules for the logical optimizer
-        
+
         // This one has to be first, as the type cast inserter expects the
         // load to only have one output.
         // Find any places in the plan that have an implicit split and make
-        // it explicit.  Since the RuleMatcher doesn't handle trees properly,
-        // we cheat and say that we match any node.  Then we'll do the actual
+        // it explicit. Since the RuleMatcher doesn't handle trees properly,
+        // we cheat and say that we match any node. Then we'll do the actual
         // test in the transformers check method.
         List<String> nodes = new ArrayList<String>(1);
         Map<Integer, Integer> edges = new HashMap<Integer, Integer>();
@@ -51,8 +60,8 @@ public class LogicalOptimizer extends PlanOptimizer<LogicalOperator, LogicalPlan
         nodes.add("any");
         required.add(true);
         mRules.add(new Rule<LogicalOperator, LogicalPlan>(nodes, edges,
-            required, new ImplicitSplitInserter(plan)));
-        
+                required, new ImplicitSplitInserter(plan)));
+
         // Add type casting to plans where the schema has been declared (by
         // user, data, or data catalog).
         nodes = new ArrayList<String>(1);
@@ -60,9 +69,9 @@ public class LogicalOptimizer extends PlanOptimizer<LogicalOperator, LogicalPlan
         edges = new HashMap<Integer, Integer>();
         required = new ArrayList<Boolean>(1);
         required.add(true);
-        mRules.add(new Rule<LogicalOperator, LogicalPlan>(nodes, edges, required,
-            new TypeCastInserter(plan, LOLOAD_CLASSNAME)));
-        
+        mRules.add(new Rule<LogicalOperator, LogicalPlan>(nodes, edges,
+                required, new TypeCastInserter(plan, LOLOAD_CLASSNAME)));
+
         // Add type casting to plans where the schema has been declared by
         // user in a statement with stream operator.
         nodes = new ArrayList<String>(1);
@@ -70,28 +79,24 @@ public class LogicalOptimizer extends PlanOptimizer<LogicalOperator, LogicalPlan
         edges = new HashMap<Integer, Integer>();
         required = new ArrayList<Boolean>(1);
         required.add(true);
-        mRules.add(new Rule(nodes, edges, required,
-            new TypeCastInserter(plan, LOSTREAM_CLASSNAME)));
-        
+        mRules.add(new Rule(nodes, edges, required, new TypeCastInserter(plan,
+                LOSTREAM_CLASSNAME)));
+
         // Optimize when LOAD precedes STREAM and the loader class
         // is the same as the serializer for the STREAM.
         // Similarly optimize when STREAM is followed by store and the
         // deserializer class is same as the Storage class.
-        mRules.add(new Rule(nodes, edges, required,
-            new StreamOptimizer(plan, LOSTREAM_CLASSNAME)));
-        
+        mRules.add(new Rule(nodes, edges, required, new StreamOptimizer(plan,
+                LOSTREAM_CLASSNAME)));
+
         // Push up limit where ever possible.
         nodes = new ArrayList<String>(1);
         edges = new HashMap<Integer, Integer>();
         required = new ArrayList<Boolean>(1);
         nodes.add("org.apache.pig.impl.logicalLayer.LOLimit");
         required.add(true);
-        mRules.add(new Rule<LogicalOperator, LogicalPlan>(nodes, edges, required,
-            new OpLimitOptimizer(plan)));
-        
-        
+        mRules.add(new Rule<LogicalOperator, LogicalPlan>(nodes, edges,
+                required, new OpLimitOptimizer(plan, mode)));
     }
 
 }
-
-
