@@ -1,0 +1,6 @@
+digraph graph1 {
+    LOLoad55 -> LOSort57;
+    LOSort57 [limit="-1"];
+    LOSort57 -> LOLimit58;
+    LOLimit58 [limit="10"];
+}
