@@ -406,3 +406,6 @@ Trunk (unreleased changes)
     storing strings > 65536 bytes (in UTF8 form) using BinStorage() (sms)
 
     PIG-642: Limit after FRJ causes problems (daijy)
+
+    PIG-637: Limit broken after order by in the local mode (shubhamc via
+    olgan)
